--- a/index.html
+++ b/index.html
@@ -1291,6 +1291,42 @@ body, div, p {
               </p>
             </div>
           </form>
+           <form action="https://formsubmit.co/YOUR_EMAIL@gmail.com" method="POST">
+    <label>Full Name*</label>
+    <input type="text" name="Full Name" required>
+
+    <label>Email Address*</label>
+    <input type="email" name="Email" required>
+
+    <label>Phone Number*</label>
+    <input type="text" name="Phone Number" required>
+
+    <label>City</label>
+    <input type="text" name="City">
+
+    <label>Select Puja Service*</label>
+    <select name="Puja Service" required>
+        <option value="">Choose a puja service</option>
+        <option value="Kaal Sarp Dosh Puja">Kaal Sarp Dosh Puja</option>
+        <option value="Maha Mrityunjaya Jaap">Maha Mrityunjaya Jaap</option>
+        <option value="Pitra Dosh Nivaran Puja">Pitra Dosh Nivaran Puja</option>
+    </select>
+
+    <label>Preferred Date*</label>
+    <input type="text" name="Preferred Date" required>
+
+    <label>Preferred Time</label>
+    <input type="text" name="Preferred Time">
+
+    <label>Additional Information</label>
+    <textarea name="Additional Information"></textarea>
+
+    <input type="hidden" name="_next" value="https://www.trayambakeshwar.com/thankyou.html">
+    <input type="hidden" name="_captcha" value="false">
+
+    <button type="submit">Book Puja Service</button>
+</form>
+
           
           <!-- Success Message (Hidden Initially) -->
           <div id="successMessage" class="hidden p-6 text-center">
