--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@ body, div, p {
               </p>
             </div>
           </form>
-           <form action="https://formsubmit.co/YOUR_EMAIL@gmail.com" method="POST">
+           <form action="https://formsubmit.co/ravi200293@gmail.com" method="POST">
     <label>Full Name*</label>
     <input type="text" name="Full Name" required>
 
